samples/_failures_safe/1761792011_b1666f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9c3d23fb.c: In function ‘main’:
./samples/SAFE/__tmp_9c3d23fb.c:136:9: error: missing terminating " character
  136 |         "2024-01-15T10:33:
      |         ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_9c3d23fb.c:136:9: error: expected expression at end of input
./samples/SAFE/__tmp_9c3d23fb.c:136:9: error: expected declaration or statement at end of input
